--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
       <button class="l drum">l</button>
     </div>
 
-    <footer>Made with ❤️ in Palermo.</footer>
+    <footer>
+      Made with ❤️ in Palermo, by a 🐼 who is studying javascript.
+    </footer>
     <script src="index.js"></script>
   </body>
 </html>
